Chapter 5 exercice 3 :Creating and Using a Partial View

--- a/PhotoSharingApp/Views/Photo/Create.cshtml
+++ b/PhotoSharingApp/Views/Photo/Create.cshtml
@@ -44,7 +44,7 @@
 
     </p>
     <p>
-        @Html.ActionLink("Back to List", "Index", )
+        @Html.ActionLink("Back to List", "Index")
     </p>
     
 }
