--- a/PhotoSharingApp/Views/Photo/Index.cshtml
+++ b/PhotoSharingApp/Views/Photo/Index.cshtml
@@ -1,64 +1,15 @@
 ﻿@model IEnumerable<PhotoSharingApp.Model.Photo>
 
-@{
-    ViewBag.Title = "Index";
-}
+<title>All photos</title>
 
-<h2>Index</h2>
+<div>
+    <h2>All photos</h2>
+    <p>
+        @Html.ActionLink("Add a Photo",
+ "Create", "Photo")
+    </p> 
+    @Html.Action("_PhotoGallery", "Photo" )
+    
+</div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PhotoFile)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Owner)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ImageMimeType)
-        </th>
-        <th></th>
-    </tr>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PhotoFile)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Owner)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ImageMimeType)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.PhotoID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.PhotoID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.PhotoID })
-            </td>
-        </tr>
-    }
-
-</table>
