chapter 8 ex1 done ! menu is displaying in all views

--- a/PhotoSharingApp/Views/Photo/Display.cshtml
+++ b/PhotoSharingApp/Views/Photo/Display.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PhotoSharingApp.Model.Photo
 
 @{
-    ViewBag.Title = "Display";
+    ViewBag.Title = Model.Title;
 }
 
 <h2>@Model.Title</h2>
