--- a/PhotoSharingApp/Views/Photo/Index.cshtml
+++ b/PhotoSharingApp/Views/Photo/Index.cshtml
@@ -1,14 +1,9 @@
-﻿@using MvcSiteMapProvider.Web.Html
-@model IEnumerable<PhotoSharingApp.Model.Photo>
+﻿@model IEnumerable<PhotoSharingApp.Model.Photo>
 
 <title>All photos</title>
 
 <div>
-    <h2>All photos</h2>
-    
-    Menu: @Html.MvcSiteMap().Menu(false, false, true)
-    Breadcrumb Trail: @Html.MvcSiteMap().SiteMapPath()
-    
+
     <p>
         @Html.ActionLink("Add a Photo",
  "Create", "Photo")
