fixed an error of System.core

--- a/PhotoSharingApp/Views/Shared/_MainLayout.cshtml
+++ b/PhotoSharingApp/Views/Shared/_MainLayout.cshtml
@@ -1,5 +1,7 @@
-﻿
+﻿<head>
 <title>@ViewBag.Title</title> 
+<link type="text/css" rel="stylesheet" href="~/content/PhotoSharingStyles.css" /> 
+</head>
 
 <div>
     <h1 class="site-page-title">
