--- a/PhotoSharingApp/Views/Home/Index.cshtml
+++ b/PhotoSharingApp/Views/Home/Index.cshtml
@@ -1,20 +1,6 @@
-﻿@{
-    Layout = null;
-}
+﻿<!DOCTYPE html>
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Welcome to Adventure Works Photo Sharing</title>
-</head>
-<body>
-    <div>
-        Menu: @Html.MvcSiteMap().Menu(false, false, true)
-        Breadcrumb Trail: @Html.MvcSiteMap().SiteMapPath()
-        
-    </div>
     <p>
         Welcome to Adventure Works Photo
         sharing! Use this site to share
@@ -23,6 +9,4 @@
     <h2>Latest Photos</h2> 
     @Html.Action("_PhotoGallery",
  "Photo", new { number = 3 }) 
-    
-</body>
-</html>
+
